--- a/Components/style.scss
+++ b/Components/style.scss
@@ -8,8 +8,10 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    height: 100vh;
+    // height: 100vh;
+    padding: 20px;
     button{
+        cursor: pointer;
         img{
             max-width: 60px;
             padding: 15px;
